# silver-palm-tree

./: Block Finalization with BFT  Block Validation Header  Block Validation Implementation  Blockchain Header  Blockchain Header (relevant to compression)  Blockchain Implementation  Blockchain Implementation (relevant to compression)  CMakeLists.txt  Compcrypt Implementation  Compression Header  Compression Logic  Consensus Header  Consensus Implementation  Gossip Protocol Simulation  Header file for Compcrypt  Main Loop for Starting Networking Layer  Main Program Blockchain Logic  Main Program to Simulate Consensus  Message Authentication (Optional for Signing and Verifying Messages)  NetworkingLayer.cpp  Project Structure  README.md  SNARK Proof Validation Implementation: snark_proof_validator.cpp  SNARK Proof Validation: snark_proof_validator.h  Transaction Pool Header: transaction_pool.h  Transaction Pool Implementation: transaction_pool.cpp  Transaction Pool Usage in Main Application  Transaction Pool and Block Proposal  VRF-Based Leader Election  blockchain.cpp  blockchain.h  compression.cpp  compression.h  consensus.cpp  consensus.h  main.cpp  main.cpp (Main Entry Point)  main.cpp (relevant to compression)  networking.cpp  networking.h  (+5 more)
Halo2 /: KZG10 Integration - Code Structure
